name:                jimage
cabal-version:       >=1.10
version:             0.1
synopsis:            Bindings to jimage
description:         Bindings to jimage.
homepage:            https://github.com/RyanGlScott/jimage
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
-- copyright:
category:            Foreign
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/RyanGlScott/jimage

flag example
  description:         Build the bundled example program.
  default:             False

library
  exposed-modules:     Bindings.JImage
  build-depends:       base >= 4.3 && < 5
  extra-libraries:     jimage
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable modules-extraction
  if !flag(example)
    buildable:         False

  main-is:             ModulesExtraction.hs
  build-depends:       base >= 4.3 && < 5
                     , jimage
  hs-source-dirs:      example
  default-language:    Haskell2010
  ghc-options:         -Wall
